Revision history for SPVM
0.9020  2021-09-20
        [CHANGES]
        * native api get_instance_method_id return -1 if the method is class method
        
        [BUGFIXES]
        * None

0.9013  2021-09-14
        [CHANGES]
        * remove sub and self keyword and add method and static keyword. Sorry.
          [Before]
          sub foo : void  ($self : self) {}
          sub bar: void  () {}
          
          [After]
          method foo : void  () {}
          static method bar : void  () {}
        
        * rename native api get_method_id_by_object to get_instance_method_id
        * rename native api get_method_id to get_class_method_id
        * Native api method signature don't need self.
          [Before]
          "int(self,long)"
          [After]
          "int(long)
        * rename native api call_callback_method_by_name to call_instance_method_by_name
        * rename native api call_spvm_method_by_name to call_class_method_by_name
        * add native api call_class_method. This is alias for call_spvm_method
        * add native api call_instance_method. This is alias for call_spvm_method
        
        [BUGFIXES]
        * None

0.9012  2021-09-10
        [CHANGES]
        * Exchange API call method string arugment copy count is reduced
        * Remove SPVM::Unicode UTF-16 related methods because I concentrate UTF-8 and Unicode
        * The name of SPVM module must start SPVM::, otherwise a compile error occurs.
          For this, Many documents of tutorial, examples, etc are changed. Sorry.
        * If the name is package name which start with upper case and the name is not start "SPVM::",
          add "SPVM::" to the package name
        * If a packag variable access contains :: and start with $ + upper case, and the name is not start "$SPVM::",
          insert "SPVM::" to the package name after $
        * Improve error message when package name is different from the package name corresponding to the module file