@@ -2,6 +2,7 @@ Revision history for SPVM
 0.9020  2021-09-20
         [CHANGES]
         * native api get_instance_method_id return -1 if the method is class method
+        * add native api get_instance_method_id_static
         
         [BUGFIXES]
         * None
